--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "test": ["./test/*"]
+      "test/*": ["./test/*"]
     },
     // Style Options
     // "noImplicitReturns": true,
